ready for public

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
   <script src="./main.eaed47a428d72107a19a.js" defer>
   </script>
   
+  If you are the owner of the original version of this website and would like me to take this down, please email me at <a href="mailto:cobre@cobre.dev"> cobre@cobre.dev </a> or message me on <a href="https://twitter.com/cobredev">Twitter</a>
+
 </body>
 </html>
